# aws-elasticache-rust

./: .env  Cargo.toml  README.md
src/: lazy_loading.rs  write_through.rs
