[package]
name = "aws-elasticache-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["full"] }
sqlx = { version = "0.7.3", features = ["sqlite"]}
serde = "1"
serde_json = "1"
redis = "0.24.0"
dotenv = "0.15.0"

[[bin]]
name = "lazy_loading"
path = "src/lazy_loading.rs"

[[bin]]
name = "write_through"
path = "src/write_through"
